--- a/contact.html
+++ b/contact.html
@@ -47,14 +47,20 @@
     </section>
 
     <section class="sidebar">
-        <div id="connect">
-            <h1>Connect with Me</h1>
-
-            <img src="Assets/images/githubicon.png" class="social" alt="github" width="100" height="150">
-            <img src="Assets/images/linkedinicon.png" class="social" alt="Linkedin" width=100px height="150">
+        <h1>Connect with Me</h1>
+        <!-- LinkedIn -->
+        <div id="Linkedin">
+            <a href="https://www.linkedin.com/in/mikaela-paul-mcintosh-2962b5a0">
+                <img src="Assets/images/linkedinicon.png" class="social" alt="Linkedin" width=100px height="150">
+            </a>
+        </div> 
+        <!-- Github -->
+        <div id="Github">
+            <a href="https://github.com/mikaelamc">
+                <img src="Assets/images/githubicon.png" class="social" alt="github" width="100" height="150">
+            </a>
         </div>
     </section>
-
     </div>
 </div>
 
