icons and resume button

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <br><br>
         <h1 class="header center teal-text text-lighten-2">Welcome!</h1>
         <div class="row center">
-          <h5 class="header col s12 light">Thank you for visiting my website! Once You're Ready to Hire Me, You Can Review My Resume Below!</h5>
+          <h5 class="header col s12 light">Thank you for visiting my website! If you would like to review my resume, please click the resume button below!</h5>
         </div>
         <div class="row center">
           <a href="./resume.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">RESUME</a>
@@ -54,7 +54,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="./Assets/images/computers.jpeg" alt="Unsplashed background img 1" ></div>
+    <div class="parallax"><img src="./Assets/images/openbook.jpg" alt="Unsplashed background img 1" ></div>
   </div>
 
 
@@ -65,7 +65,7 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">cast</i></h2>
+            <h2 class="center brown-text"><i class="material-icons">assignment_turned_in</i></h2>
             <h5 class="center">About Me!</h5>
 
             <p class="light">Welcome to my Portfolio! My name is Mikaela and on this web page you will learn a little bit about my interests, and most importantly my work.
@@ -76,7 +76,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">group</i></h2>
+            <h2 class="center brown-text"><i class="material-icons">extension</i></h2>
             <h5 class="center">Future Coder!</h5>
             <!-- Profile Pic -->
               <img src="./Assets/images/profilepic.jpg" id="profilepic" alt="Profile Pic" width=200px height=250px class="auth-image">
@@ -86,7 +86,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">bookmark</i></h2>
+            <h2 class="center brown-text"><i class="material-icons">assignment</i></h2>
             <h5 class="center">Current Works!</h5>
 
             <p class="light">If I'm not working on various implementations at The Salvation Army or studying coding, I am catching up on my other interests. The things I enjoy most in life are spending time with my loved ones, dancing, reading, traveling, and learning new things.
