--- a/portfolio.html
+++ b/portfolio.html
@@ -62,9 +62,9 @@
               <div class="container">
                 <br><br>
                 <h1 class="header center teal-text text-lighten-2">Welcome!</h1>
-                <div class="row center">
-                  <h5 id="portofiotext" class="header col s12 light">Thank you for visiting my website! Once You're Ready to Hire Me, You Can Review My Resume Below!</h5>
-                </div>
+                <!-- <div class="row center">
+                  <h5 id="portofiotext" class="header col s12 light">Thank you for visiting my website! If you would like to review my resume, please click the resume button below!</h5>
+                </div> -->
                 <div class="row center">
                   <a href="./resume.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Resume</a>
                 </div>
@@ -83,6 +83,11 @@
         <!-- Portfolio Works -->
   
             <div id="main-container" class="container">
+
+                    <div class="row center">
+                            <h5 id="portofiotext" class="header col s12 light">Thank you for visiting my website! If you would like to review my resume, please click the resume button above!</h5>
+                          </div>
+
                     <section class ="main-section">
                         <h1>Portfolio</h1>
                 
