--- a/resume.html
+++ b/resume.html
@@ -54,7 +54,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="./Assets/images/computers.jpeg" alt="Unsplashed background img 1" ></div>
+    <div class="parallax"><img src="./Assets/images/openbook.jpg" alt="Unsplashed background img 1" ></div>
   </div>
 
   <img src="./Assets/images/resume.png">
